--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <java.version>1.8</java.version>
         <hive.jdbc.version>1.1.0</hive.jdbc.version>
         <hadoop.version>2.6.0</hadoop.version>
+        <pagehelper.version>4.2.1</pagehelper.version>
+        <jsqlparser-version>0.9.5</jsqlparser-version>
     </properties>
 
     <dependencies>
@@ -35,6 +37,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -67,6 +73,18 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
         </dependency>
+        <!--分页插件 -->
+      <!--  <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
+        </dependency>
+        &lt;!&ndash; pagehelper的依赖包:jsqlparser &ndash;&gt;
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+            <version>${jsqlparser-version}</version>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
