--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 
-hive.driver=org.apache.hive.jdbc.HiveDriver
-hive.url=jdbc:hive2://192.168.6.64:10000/default
-hive.username=
-hive.password=
+#hive.driver=org.apache.hive.jdbc.HiveDriver
+#hive.url=jdbc:hive2://192.168.6.64:10000/default
+#hive.username=
+#hive.password=
+
+spring.thymeleaf.encoding=utf-8
+spring.thymeleaf.prefix=classpath:/templates
+spring.thymeleaf.suffix=.html
