--- a/pom.xml
+++ b/pom.xml
@@ -74,17 +74,16 @@
             <version>1.2.47</version>
         </dependency>
         <!--分页插件 -->
-      <!--  <dependency>
+      <!--<dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
             <version>${pagehelper.version}</version>
-        </dependency>
-        &lt;!&ndash; pagehelper的依赖包:jsqlparser &ndash;&gt;
-        <dependency>
-            <groupId>com.github.jsqlparser</groupId>
-            <artifactId>jsqlparser</artifactId>
-            <version>${jsqlparser-version}</version>
         </dependency>-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
