--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@
 #hive.url=jdbc:hive2://192.168.6.64:10000/default
 #hive.username=
 #hive.password=
+hive.driver=com.mysql.jdbc.Driver
+hive.url=jdbc:mysql://localhost:3306/bw?useUnicode=true&allowMultiQuerie=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+hive.username=root
+hive.password=root123
 
 spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.prefix=classpath:/templates
