--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 
-#hive.driver=org.apache.hive.jdbc.HiveDriver
-#hive.url=jdbc:hive2://192.168.6.64:10000/default
-#hive.username=
-#hive.password=
-hive.driver=com.mysql.jdbc.Driver
-hive.url=jdbc:mysql://localhost:3306/bw?useUnicode=true&allowMultiQuerie=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+hive.driver=org.apache.hive.jdbc.HiveDriver
+hive.url=jdbc:hive2://192.168.6.92:10000/ymctest
+
+#hive.driver=com.mysql.jdbc.Driver
+#hive.url=jdbc:mysql://localhost:3306/bw?useUnicode=true&allowMultiQuerie=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 hive.username=root
 hive.password=root123
 
